# KNNG_GPU

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_brute_force.cpp  bench_nn_descent.cpp
cmake/: CompilerWarnings.cmake  FetchGoogleBenchmark.cmake  FetchGoogleTest.cmake  FindKnngBlas.cmake  FindKnngMPI.cmake  FindKnngOpenMP.cmake  version.hpp.in
docs/: CMakeLists.txt  DISTRIBUTED.md  Doxyfile.in  NN_DESCENT.md  NUMA.md  PERF_STEP23.md  SCALING_CPU.md  STYLE.md  aggregate_phase4.py  aggregate_phase5.py
include/knng/: random.hpp  top_k.hpp
include/knng/bench/: ground_truth.hpp  recall.hpp  runtime_counters.hpp
include/knng/core/: dataset.hpp  distance.hpp  graph.hpp  types.hpp
include/knng/cpu/: brute_force.hpp  distance.hpp  distance_simd.hpp  neighbor_list.hpp  nn_descent.hpp  numa.hpp
include/knng/io/: fvecs.hpp
src/: CMakeLists.txt
src/bench/: ground_truth.cpp  recall.cpp  runtime_counters.cpp
src/cpu/: brute_force.cpp  brute_force_blas.cpp  brute_force_omp.cpp  brute_force_threads.cpp  distance.cpp  distance_simd.cpp  neighbor_list.cpp  nn_descent.cpp  numa.cpp
src/io/: fvecs.cpp
tests/: CMakeLists.txt  brute_force_test.cpp  core_test.cpp  fvecs_test.cpp  ground_truth_test.cpp  mpi_brute_force_test.cpp  mpi_env_test.cpp  mpi_nn_descent_test.cpp  mpi_request_dedup_test.cpp  mpi_sharded_test.cpp  mpi_shm_replication_test.cpp  neighbor_list_test.cpp  nn_descent_test.cpp  numa_test.cpp  random_test.cpp  recall_test.cpp  smoke_test.cpp  top_k_test.cpp
tools/: CMakeLists.txt  build_knng.cpp  download_sift.sh  hello_knng.cpp  plot_bench.py  run_bench_numa.sh
